include/Win32/Physics.NewtonImport.hpp

typedef float dFloat;
typedef float *PFloat;
typedef float *PdFloat;
typedef void * *PNewtonBody;
typedef void * *PNewtonWorld;
typedef void * *PNewtonJoint;
typedef void * *PNewtonCollision;
typedef void __cdecl (*NewtonBodyDestructor)(const PNewtonBody body);
typedef NewtonBodyDestructor *PNewtonBodyDestructor;
typedef void __cdecl (*NewtonApplyForceAndTorque)(const PNewtonBody body, float timestep, int threadIndex);
typedef NewtonApplyForceAndTorque *PNewtonApplyForceAndTorque;
typedef void __cdecl (*NewtonSetTransform)(const PNewtonBody body, const PFloat matrix, int threadIndex);
typedef NewtonSetTransform *PNewtonSetTransform;
//-- var, const, procedure ---------------------------------------------------
#define NEWTON_API L"newton32s.dll"
extern "C" void * __cdecl NewtonCollisionAggregateCreate(const PNewtonWorld world);
extern "C" void __cdecl NewtonCollisionAggregateDestroy(const void * aggregate);
extern "C" void __cdecl NewtonCollisionAggregateAddBody(const void * aggregate, const PNewtonBody body);
extern "C" void __cdecl NewtonCollisionAggregateRemoveBody(const void * aggregate, const PNewtonBody body);
extern "C" int __cdecl NewtonCollisionAggregateGetSelfCollision(const void * aggregate);
extern "C" void __cdecl NewtonCollisionAggregateSetSelfCollision(const void * aggregate, int state);
extern "C" void __cdecl NewtonSetEulerAngle(const PFloat eulersAngles, const PFloat matrix);
extern "C" void __cdecl NewtonGetEulerAngle(const PFloat matrix, const PFloat eulersAngles0, const PFloat eulersAngles1);
extern "C" float __cdecl NewtonCalculateSpringDamperAcceleration(float dt, float ks, float x, float kd, float s);
extern "C" PNewtonBody __cdecl NewtonCreateDynamicBody(const PNewtonWorld newtonWorld, const PNewtonCollision collision, const PFloat matrix);
extern "C" PNewtonBody __cdecl NewtonCreateKinematicBody(const PNewtonWorld newtonWorld, const PNewtonCollision collision, const PFloat matrix);
extern "C" PNewtonBody __cdecl NewtonCreateAsymetricDynamicBody(const PNewtonWorld newtonWorld, const PNewtonCollision collision, const PFloat matrix);
extern "C" void __cdecl NewtonDestroyBody(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetSimulationState(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetSimulationState(const PNewtonBody bodyPtr, const int state);
extern "C" int __cdecl NewtonBodyGetType(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetCollidable(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetCollidable(const PNewtonBody body, int collidableState);
extern "C" void __cdecl NewtonBodyAddForce(const PNewtonBody body, const PFloat force);
extern "C" void __cdecl NewtonBodyAddTorque(const PNewtonBody body, const PFloat torque);
extern "C" void __cdecl NewtonBodyCalculateInverseDynamicsForce(PNewtonBody body, float timestep, PdFloat desiredVeloc, PdFloat forceOut);
extern "C" void __cdecl NewtonBodySetCentreOfMass(const PNewtonBody body, const PFloat com);
extern "C" void __cdecl NewtonBodySetMassMatrix(const PNewtonBody body, float mass, float Ixx, float Iyy, float Izz);
extern "C" void __cdecl NewtonBodySetFullMassMatrix(const PNewtonBody body, float mass, const PFloat inertiaMatrix);
extern "C" void __cdecl NewtonBodySetMassProperties(const PNewtonBody body, float mass, const PNewtonCollision collision);
extern "C" void __cdecl NewtonBodySetMatrix(const PNewtonBody body, const PFloat matrix);
extern "C" void __cdecl NewtonBodySetMatrixNoSleep(const PNewtonBody body, const PFloat matrix);
extern "C" void __cdecl NewtonBodySetMatrixRecursive(const PNewtonBody body, const PFloat matrix);
extern "C" void __cdecl NewtonBodySetMaterialGroupID(const PNewtonBody body, int id);
extern "C" void __cdecl NewtonBodySetContinuousCollisionMode(const PNewtonBody body, unsigned state);
extern "C" void __cdecl NewtonBodySetJointRecursiveCollision(const PNewtonBody body, unsigned state);
extern "C" void __cdecl NewtonBodySetOmega(const PNewtonBody body, const PFloat omega);
extern "C" void __cdecl NewtonBodySetOmegaNoSleep(const PNewtonBody body, const PFloat omega);
extern "C" void __cdecl NewtonBodySetVelocity(const PNewtonBody body, const PFloat velocity);
extern "C" void __cdecl NewtonBodySetVelocityNoSleep(const PNewtonBody body, const PFloat velocity);
extern "C" void __cdecl NewtonBodySetForce(const PNewtonBody body, const PFloat force);
extern "C" void __cdecl NewtonBodySetTorque(const PNewtonBody body, const PFloat torque);
extern "C" void __cdecl NewtonBodySetLinearDamping(const PNewtonBody body, float linearDamp);
extern "C" void __cdecl NewtonBodySetAngularDamping(const PNewtonBody body, const PFloat angularDamp);
extern "C" void __cdecl NewtonBodySetCollision(const PNewtonBody body, const PNewtonCollision collision);
extern "C" void __cdecl NewtonBodySetCollisionScale(const PNewtonBody body, float scaleX, float scaleY, float scaleZ);
extern "C" int __cdecl NewtonBodyGetSleepState(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetSleepState(const PNewtonBody body, int state);
extern "C" int __cdecl NewtonBodyGetAutoSleep(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetAutoSleep(const PNewtonBody body, int state);
extern "C" int __cdecl NewtonBodyGetFreezeState(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetFreezeState(const PNewtonBody body, int state);
extern "C" int __cdecl NewtonBodyGetGyroscopicTorque(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetGyroscopicTorque(const PNewtonBody body, int state);
extern "C" void __cdecl NewtonBodySetDestructorCallback(const PNewtonBody body, NewtonBodyDestructor callback);
extern "C" PNewtonBodyDestructor __cdecl NewtonBodyGetDestructorCallback(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetTransformCallback(const PNewtonBody body, NewtonSetTransform callback);
extern "C" PNewtonSetTransform __cdecl NewtonBodyGetTransformCallback(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetForceAndTorqueCallback(const PNewtonBody body, NewtonApplyForceAndTorque callback);
extern "C" PNewtonApplyForceAndTorque __cdecl NewtonBodyGetForceAndTorqueCallback(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetID(const PNewtonBody body);
extern "C" void __cdecl NewtonBodySetUserData(const PNewtonBody body, const void * userData);
extern "C" void * __cdecl NewtonBodyGetUserData(const PNewtonBody body);
extern "C" PNewtonWorld __cdecl NewtonBodyGetWorld(const PNewtonBody body);
extern "C" PNewtonCollision __cdecl NewtonBodyGetCollision(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetMaterialGroupID(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetSerializedID(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetContinuousCollisionMode(const PNewtonBody body);
extern "C" int __cdecl NewtonBodyGetJointRecursiveCollision(const PNewtonBody body);
extern "C" void __cdecl NewtonBodyGetPosition(const PNewtonBody body, const PFloat pos);
extern "C" void __cdecl NewtonBodyGetMatrix(const PNewtonBody body, const PFloat matrix);
extern "C" void __cdecl NewtonBodyGetRotation(const PNewtonBody body, const PFloat rotation);
extern "C" void __cdecl NewtonBodyGetMass(const PNewtonBody body, PFloat mass, const PFloat Ixx, const PFloat Iyy, const PFloat Izz);
extern "C" void __cdecl NewtonBodyGetInvMass(const PNewtonBody body, const PFloat invMass, const PFloat invIxx, const PFloat invIyy, const PFloat invIzz);
extern "C" void __cdecl NewtonBodyGetInertiaMatrix(const PNewtonBody body, const PFloat inertiaMatrix);
extern "C" void __cdecl NewtonBodyGetInvInertiaMatrix(const PNewtonBody body, const PFloat invInertiaMatrix);
extern "C" void __cdecl NewtonBodyGetOmega(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetVelocity(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetAlpha(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetAcceleration(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetForce(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetTorque(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetCentreOfMass(const PNewtonBody body, const PFloat com);
extern "C" void __cdecl NewtonBodyGetPointVelocity(const PNewtonBody body, const PFloat point, const PFloat velocOut);
extern "C" void __cdecl NewtonBodyApplyImpulsePair(const PNewtonBody body, const PFloat linearImpulse, const PFloat angularImpulse, float timestep);
extern "C" void __cdecl NewtonBodyAddImpulse(const PNewtonBody body, const PFloat pointDeltaVeloc, const PFloat pointPosit, float timestep);
extern "C" void __cdecl NewtonBodyApplyImpulseArray(const PNewtonBody body, int impuleCount, int strideInByte, const PFloat impulseArray, const PFloat pointArray, float timestep);
extern "C" void __cdecl NewtonBodyIntegrateVelocity(const PNewtonBody body, float timestep);
extern "C" float __cdecl NewtonBodyGetLinearDamping(const PNewtonBody body);
extern "C" void __cdecl NewtonBodyGetAngularDamping(const PNewtonBody body, const PFloat vector);
extern "C" void __cdecl NewtonBodyGetAABB(const PNewtonBody body, const PFloat p0, const PFloat p1);
extern "C" PNewtonJoint __cdecl NewtonBodyGetFirstJoint(const PNewtonBody body);
extern "C" PNewtonJoint __cdecl NewtonBodyGetNextJoint(const PNewtonBody body, const PNewtonJoint joint);
extern "C" PNewtonJoint __cdecl NewtonBodyGetFirstContactJoint(const PNewtonBody body);
extern "C" PNewtonJoint __cdecl NewtonBodyGetNextContactJoint(const PNewtonBody body, const PNewtonJoint contactJoint);
extern "C" PNewtonJoint __cdecl NewtonBodyFindContact(const PNewtonBody body0, const PNewtonBody body1);